<resources>
    <string name="app_name">DMCC Test</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="create_an_account">Create an account</string>
    <string name="_continue">Continue</string>
    <string name="address_line_1">Address Line 1</string>
    <string name="address_line_2">Address Line 2</string>
    <string name="address_line_3">Address Line 3</string>
    <string name="get_location">Get Location</string>
    <string name="send_certificate">Send Certificate</string>
    <string name="logout">Logout</string>
</resources>