<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="regViewModel"
            type="com.samboy.dmcc.auth.viewmodel.AuthViewModel" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_main">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".auth.ui.RegisterActivity"
            android:gravity="center"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:text="@string/register"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/_35ssp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <EditText
                android:text="@={regViewModel.email}"
                android:layout_width="@dimen/_200sdp"
                android:layout_height="@dimen/_35sdp"
                android:background="@drawable/bg_edt"
                android:layout_marginTop="@dimen/_10sdp"
                android:hint="@string/email"
                android:singleLine="true"
                android:textSize="@dimen/_12ssp"
                android:textAlignment="center"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorGrayVL"/>
            <EditText
                android:text="@={regViewModel.password}"
                android:layout_width="@dimen/_200sdp"
                android:layout_height="@dimen/_35sdp"
                android:background="@drawable/bg_edt"
                android:layout_marginTop="@dimen/_10sdp"
                android:hint="@string/password"
                android:singleLine="true"
                android:inputType="textPassword"
                android:textSize="@dimen/_12ssp"
                android:textAlignment="center"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorGrayVL"/>
            <EditText
                android:text="@={regViewModel.name}"
                android:layout_width="@dimen/_200sdp"
                android:layout_height="@dimen/_35sdp"
                android:background="@drawable/bg_edt"
                android:layout_marginTop="@dimen/_10sdp"
                android:hint="@string/name"
                android:singleLine="true"
                android:textSize="@dimen/_12ssp"
                android:textAlignment="center"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorGrayVL"/>
            <EditText
                android:text="@={regViewModel.mobile}"
                android:layout_width="@dimen/_200sdp"
                android:layout_height="@dimen/_35sdp"
                android:background="@drawable/bg_edt"
                android:layout_marginTop="@dimen/_10sdp"
                android:hint="@string/phone"
                android:inputType="phone"
                android:singleLine="true"
                android:textSize="@dimen/_12ssp"
                android:textAlignment="center"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorGrayVL"/>
            <Button
                android:onClick="@{(view)->regViewModel.onRegister(view)}"
                android:layout_width="@dimen/_200sdp"
                android:layout_height="@dimen/_35sdp"
                android:background="@drawable/bg_btn_login"
                android:layout_marginTop="@dimen/_20sdp"
                android:text="@string/register"
                android:textSize="@dimen/_12ssp"
                android:textAllCaps="false"
                android:textColor="@color/colorGrayVL"/>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>
</layout>
